--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -1,19 +1,54 @@
 
+- name: make sure older versions of docker are removed
+  become: true
+  package:
+    state: absent
+    name:
+      - docker
+      - docker-engine
+      - docker.io
+      - containerd
+      - runc
+
+# Install instructions at: https://docs.docker.com/engine/install/ubuntu/
+
+- name: Install docker apt repository
+  become: true
+  shell: |
+    mkdir -p /etc/apt/keyrings
+    if [ ! -f /etc/apt/keyrings/docker.gpg ]; then
+      curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+    fi
+    echo \
+      "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+      $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+- name: install docker packages
+  become: true
+  package:
+    update_cache: true
+    name:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-compose-plugin
+
 - name: create docker group
   become: true
-  group: 
+  group:
     name: docker
     state: present
 
 - name: sudoless docker commands
-  become: true 
+  become: true
   user:
     name: "{{ lookup('ansible.builtin.env', 'USER') }}"
     groups: docker
     append: yes
 
-- name: run docker on startup
-  service:
-    name: docker
-    state: started
-    enabled: true 
+
+##- name: run docker on startup
+##  service:
+##    name: docker
+##    state: started
+##    enabled: true
